tests/parsing/parameter_order/stderr.golden
error: parameters without default value must precede the ones with default value
bus.fbd +1:26
   |
 1 | type my_config(width=10, foo) config
   |                          ^^^
